<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
    <string name="facebook_app_id" translatable="false">167636160580920</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb167636160580920</string>

    <string name="app_name">PlayTime</string>
    <string name="title_poster">Pôster do Título</string>
    <string name="launched_at">Lançado em %1$s</string>
    <string name="no_more_titles_for_you">Sem recomendações</string>
    <string name="play">Play</string>
    <string name="time">Time</string>
    <string name="out_of_10">/10</string>
    <string name="title_watched_times">Assistida por %1$d usuários</string>
    <string name="title_score">%1$.1f</string>
    <string name="search">Procurar Filme, Série</string>
    <string name="title_rating">Pontos</string>
    <string name="title_launch_date">Data de Lançamento</string>
    <string name="out_of_something">/%1$d</string>
    <string name="title_cast">Elenco</string>
    <string name="title_comments">Comentários</string>
    <string name="title_seasons">Temporadas</string>
    <string name="profile_hours">Horas</string>
    <string name="profile_followers">Seguidores</string>
    <string name="profile_titles_watched">Assistidos</string>
    <string name="profile_view_history">Histórico</string>
    <string name="profile_favorite_titles">Favoritos</string>
    <string name="profile_edit_information">Editar Perfil</string>
    <string name="login_help_connect">Ajuda</string>
    <string name="login_account">Entrar na conta</string>
    <string name="login_account_email">Faça login usando seu email e senha</string>
    <string name="login_email_hint">Digite seu email</string>
    <string name="login_password_hint">Digite sua senha</string>
    <string name="login_create_account">Usuário novo? Crie sua conta</string>
    <string name="login_connect">Entrar</string>
    <string name="login_facebook">Entrar com Facebook</string>
    <string name="profile_reviews">Comentários e Avaliações</string>
    <string name="login_continue">Continuar</string>
    <string name="app_tagline">Dê o play com seus amigos</string>
    <string name="internal_error">Erro interno</string>
    <string name="invalid_login">Login Inválido</string>
    <string name="nav_movies">Filmes</string>
    <string name="nav_series">Séries</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_recommendations">Recomendações</string>
    <string name="nav_watchlist">Minha Lista</string>
    <string name="added_format">Adicionado %1$s</string>
    <string name="title_runtime_format">%1$d min</string>
    <string name="details_current_page">%1$d</string>
    <string name="title_like_format">%1$d</string>
    <string name="watch_trailer">Assistir Trailer</string>
    <string name="release_date_format">Lançado %1$s</string>
    <string name="alike_titles_label">Títulos Parecidos</string>
    <string name="series_episode_count">%1$d episódios</string>
    <string name="play_search">Search</string>
    <string name="filter_title_genre">Categoria</string>
    <string name="filter_title_year">Ano de Lançamento</string>
    <string name="filter_title_year_hint">Ano</string>
    <string name="filter_title_year_equal_to">Igual</string>
    <string name="filter_title_year_greater_than">Maior que</string>
    <string name="filter_title_year_smaller_than">Menor que</string>
    <string name="btn_filter">Buscar</string>
    <string name="chip_action">Ação</string>
    <string name="simple_integer_format">%1$d</string>
    <string name="user_image_transition" translatable="false">user_image_transition</string>
    <string name="login_failed">Login falhou</string>
    <string name="you_need_to_allow_all_features">Você precisa permitir todas as funções</string>
    <string name="facebook_login_error">Login com Facebook falhou</string>
    <string name="invalid_credentials">Credenciais Incorretas</string>
    <string name="title_image_transition">title_image_transition</string>
    <string name="no_movie_on_watchlist">Nenhum item foi adicionado a lista de assistir depois\nSelecione um filme que ele aparecerá aqui</string>
    <string name="title_added_to_watchlist">%1$s foi adicionado à lista</string>
    <string name="title_marked_as_watched">%1$s foi marcado como assistido</string>
</resources>
