<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_help_connect"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:fontFamily="@font/product_sans_regular"
            android:layout_gravity="end"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:text="@string/login_account"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:fontFamily="@font/product_sans_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/login_account_email"
            android:textSize="15sp"
            android:fontFamily="@font/product_sans_regular"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/product_sans_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:fontFamily="@font/product_sans_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_connect"
            app:backgroundTint="@color/login_button_blue"
            android:fontFamily="@font/product_sans_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_create_account"
            android:textSize="12sp"
            android:fontFamily="@font/product_sans_regular"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login_facebook"
                app:icon="@drawable/com_facebook_button_icon_white"
                app:backgroundTint="@color/com_facebook_button_background_color"
                android:fontFamily="@font/product_sans_regular"/>
        </LinearLayout>

    </LinearLayout>
</layout>