<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_edit_information"
                android:textColor="@color/edit_profile_blue"
                android:gravity="end"
                android:fontFamily="@font/product_sans_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginEnd="8dp"
                        tools:text="João Paulo Santos Sena"
                        android:textSize="20sp"
                        android:textColor="@color/primaryText"
                        android:fontFamily="@font/product_sans_regular" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:maxLines="2"
                        tools:text="Uma boa frase de efeito pode mudar tudo"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="@font/product_sans_regular" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    tools:src="@tools:sample/avatars"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal">
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="5602"
                        android:textColor="@color/primaryText"
                        android:textSize="17sp"
                        android:fontFamily="@font/product_sans_regular"
                        android:textAlignment="gravity"
                        android:gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_hours"
                        android:textColor="@color/secondaryText"
                        android:textSize="13sp"
                        android:fontFamily="@font/product_sans_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1497"
                        android:textColor="@color/primaryText"
                        android:textSize="17sp"
                        android:fontFamily="@font/product_sans_regular"
                        android:textAlignment="gravity"
                        android:gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_followers"
                        android:textColor="@color/secondaryText"
                        android:textSize="13sp"
                        android:fontFamily="@font/product_sans_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2103"
                        android:textColor="@color/primaryText"
                        android:textSize="17sp"
                        android:fontFamily="@font/product_sans_regular"
                        android:textAlignment="gravity"
                        android:gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_titles_watched"
                        android:textColor="@color/secondaryText"
                        android:textSize="13sp"
                        android:fontFamily="@font/product_sans_regular" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/profile_favorite_titles"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/product_sans_regular"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/profile_reviews"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/product_sans_regular"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_user_posts">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/profile_view_history"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/product_sans_regular"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
</layout>